trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -238,7 +238,7 @@ button{
         width: 45%;
         margin: 0% 27.5% 0% 27.5%;
         height: 20px;
-        top: 12%;
+        top: 13%;
         left: 0%;
     }
 
